--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,11 @@
 pluginManagement {
     repositories {
+        maven {
+            url 'https://maven.aliyun.com/repository/central'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/public'
+        }
         gradlePluginPortal()
         google()
         mavenCentral()
@@ -8,6 +14,12 @@ pluginManagement {
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven {
+            url 'https://maven.aliyun.com/repository/central'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/public'
+        }
         google()
         mavenCentral()
     }
